Bug 331271 - Full view does not show overlay buttons on metacontact
Summary: Full view does not show overlay buttons on metacontact
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: 0.7.0
Platform: unspecified Linux
: NOR normal
Target Milestone: 0.8.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-18 11:22 UTC by David Edmundson
Modified: 2014-02-27 10:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2014-02-18 11:22:45 UTC
Full view does not show overlay buttons on metacontact
Comment 1 David Edmundson 2014-02-27 10:41:37 UTC
Git commit e2b76fd413a463350de7289ace45a319954451a5 by David Edmundson.
Committed on 24/02/2014 at 22:48.
Pushed by davidedmundson into branch 'master'.

Also show overlays on metacontacts

REVIEW: 116033
FIXED-IN: 0.8.0

M  +2    -1    contact-overlays.cpp

http://commits.kde.org/telepathy-contact-list/e2b76fd413a463350de7289ace45a319954451a5