Also show overlays on metacontacts

REVIEW: 116033
BUG: 331271
FIXED-IN: 0.8.0